Habilitando ambientes de NODE y mejora de swagger para upload logo
